# role-fit-radar

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILLS.md  assessor.py  config.example.py  gitignore  gmail.py  main.py  pyproject.toml  requirements.txt  scan.yml  sheets.py
.claude/: settings.json
.claude/agents/: pre-commit.md
.github/workflows/: scan.yml  scan_friend.yml
sources/: adzuna.py  ashby.py  efinancialcareers.py  eightfold.py  file_mode.py  filters.py  gmail_linkedin.py  greenhouse.py  higher.py  oracle_hcm.py  scraper.py  simplyhired.py  tes.py  wfh_hub.py  workday.py
tests/: conftest.py  test_adzuna.py  test_ashby.py  test_assessor.py  test_efinancialcareers.py  test_eightfold.py  test_file_mode.py  test_filters.py  test_gmail.py  test_gmail_linkedin.py  test_greenhouse.py  test_higher.py  test_main_dedup.py  test_main_timeout.py  test_oracle_hcm.py  test_sheets.py  test_simplyhired.py  test_tes.py  test_wfh_hub.py  test_workday.py
